cmake_minimum_required(VERSION 3.9)
project(Billiard_AP)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
set(SOURCE_FILES main2.cpp headers/table.h headers/network.h sources/network.cpp headers/resource.h sources/resource.cpp sources/table.cpp headers/ball.h sources/ball.cpp headers/handle.h sources/handle.cpp headers/hole.h sources/hole.cpp headers/game.h sources/game.cpp sources/UDPNetwork.cpp headers/UDPNetwork.h)
add_executable(Billiard_AP ${SOURCE_FILES})
set(CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/cmake_modules")
find_package(SFML REQUIRED system window graphics network audio)
if (SFML_FOUND)
    include_directories(${SFML_INCLUDE_DIR})
    target_link_libraries(Billiard_AP ${SFML_LIBRARIES} -lpthread)
endif()
